--- a/package.json
+++ b/package.json
@@ -11,14 +11,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://gitlab.com/shikharagerawal1/image-filter.git"
+    "url": "git+https://github.com/shikharagerawal1/image-filter-c2-udacity.git"
   },
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://gitlab.com/shikharagerawal1/image-filter/issues"
+    "url": "https://github.com/shikharagerawal1/image-filter-c2-udacity/issues"
   },
-  "homepage": "https://gitlab.com/shikharagerawal1/image-filter",
+  "homepage": "https://github.com/shikharagerawal1/image-filter-c2-udacity",
   "devDependencies": {
     "@types/bluebird": "^3.5.27",
     "@types/express": "^4.17.0",
